--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 id="logo">dev.finance$</h1>
         </header>
 
-        <main>
+        <main class="container">
             <section id="balance">
                 <h2>Balanço</h2>
 
@@ -26,7 +26,7 @@
                     <p>R$ 2.000,00</p>
                 </div>
 
-                <div class="card-total">
+                <div class="card total">
                     <h3>Total</h3>
                     <p>R$ 3.000,00</p>
                 </div>
@@ -51,7 +51,7 @@
                         </tr>
                         <tr>
                             <td class="description">Criação website</td>
-                            <td class="expense">R$ 5000,00</td>
+                            <td class="income">R$ 5000,00</td>
                             <td class="date">23/01/2021</td>
                         </tr>
                         <tr>
