--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <section id="transaction">
                 <h2 class="sr-only">Transações</h2>
 
-                <a href="#" class="button new">+ Nova Transação</a>
+                <a href="#" 
+                onclick="Modal.open()"
+                class="button new">+ Nova Transação</a>
 
                 <table id="data-table">
                     <thead>
@@ -92,7 +94,7 @@
             </section>
         </main>
 
-        <div class="modal-overlay active">
+        <div class="modal-overlay">
             <div class="modal">
                 <div id="form">
                     <h2>Nova Transação</h2>
@@ -135,7 +137,9 @@
                         </div>
 
                         <div class="input-group actions">
-                            <a href="#" class="button cancel">Cancelar</a>
+                            <a href="#"
+                            onclick="Modal.close()"
+                            class="button cancel">Cancelar</a>
                             <button>Salvar</button>
                         </div>
                     </form>
@@ -146,7 +150,20 @@
         <footer><p>dev.finance$</p></footer>
 
         <script>
-            
+            const Modal = {
+                open() {
+                    document
+                        .querySelector('.modal-overlay')
+                        .classList
+                        .add('active')
+                },
+                close() {
+                    document
+                        .querySelector('.modal-overlay')
+                        .classList
+                        .remove('active')
+                }
+            }
         </script>
     </body>
 </html>
