Update html class 3

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 
         <script>
             const Modal = {
+                // Estudar toggle e trocar pelo add/remove
                 open() {
                     document
                         .querySelector('.modal-overlay')
