Update html, css and js class 3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </span>
                         <img src="./assets/income.svg" alt="Imagem de entradas">
                     </h3>
-                    <p>R$ 5.000,00</p>
+                    <p id="incomeDisplay">R$ 0,00</p>
                 </div>
 
                 <div class="card">
@@ -34,7 +34,7 @@
                         </span>
                         <img src="./assets/expense.svg" alt="Imagem de saídas">
                     </h3>
-                    <p>R$ 2.000,00</p>
+                    <p id="expenseDisplay">R$ 0,00</p>
                 </div>
 
                 <div class="card total">
@@ -44,7 +44,7 @@
                         </span>
                         <img src="./assets/total.svg" alt="Imagem de total">
                     </h3>
-                    <p>R$ 3.000,00</p>
+                    <p id="totalDisplay">R$ 0,00</p>
                 </div>
             </section>
 
@@ -52,7 +52,7 @@
                 <h2 class="sr-only">Transações</h2>
 
                 <a href="#" 
-                onclick="Modal.open()"
+                onclick="Modal.openClose()"
                 class="button new">+ Nova Transação</a>
 
                 <table id="data-table">
@@ -65,7 +65,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                <!--   <tr>
                             <td class="description">Luz</td>
                             <td class="expense">- R$ 500,00</td>
                             <td class="date">23/01/2021</td>
@@ -88,7 +88,7 @@
                             <td>
                                 <img src="./assets/minus.svg" alt="">
                             </td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </section>
@@ -98,7 +98,7 @@
             <div class="modal">
                 <div id="form">
                     <h2>Nova Transação</h2>
-                    <form action="">
+                    <form action="" onsubmit="Form.submit(event)">
                         <div class="input=group">
                             <label 
                                 class="sr-only"
@@ -138,7 +138,7 @@
 
                         <div class="input-group actions">
                             <a href="#"
-                            onclick="Modal.close()"
+                            onclick="Modal.openClose()"
                             class="button cancel">Cancelar</a>
                             <button>Salvar</button>
                         </div>
@@ -149,22 +149,6 @@
 
         <footer><p>dev.finance$</p></footer>
 
-        <script>
-            const Modal = {
-                // Estudar toggle e trocar pelo add/remove
-                open() {
-                    document
-                        .querySelector('.modal-overlay')
-                        .classList
-                        .add('active')
-                },
-                close() {
-                    document
-                        .querySelector('.modal-overlay')
-                        .classList
-                        .remove('active')
-                }
-            }
-        </script>
+        <script src="./scripts.js"></script>
     </body>
 </html>
