Update extra mile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section id="balance">
                 <h2 class="sr-only">Balanço</h2>
 
-                <div class="card">
+                <div class="card income">
                     <h3>
                         <span>
                             Entradas
@@ -27,7 +27,7 @@
                     <p id="incomeDisplay">R$ 0,00</p>
                 </div>
 
-                <div class="card">
+                <div class="card expense">
                     <h3>
                         <span>
                             Saídas
