Update extra mile dark theme

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,200;1,400;1,700&display=swap">
     </head>
     <body>
+        <div id="change-theme">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">
+              <div id="ball"></div>
+            </label>
+        </div>
+
         <header>
             <img src="./assets/logo.svg" alt="Logo Dev Finance">
         </header>
@@ -125,6 +132,7 @@
 
         <footer><p>dev.finance$</p></footer>
 
+        <script src="./change-theme.js"></script>
         <script src="./scripts.js"></script>
     </body>
 </html>
